--- a/Media/desktop.ini
+++ b/Media/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 Screenshot (18).png=@Screenshot (18),0
 Screenshot (17).png=@Screenshot (17),0
+Screenshot (22).png=@Screenshot (22),0
